<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="top"
        android:adjustViewBounds="true"
        android:background="@android:color/black"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop" />


    <TextView
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:text="@string/who_can_see" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default">

        <RadioButton
            android:id="@+id/radioButtonFamily"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_family" />

        <RadioButton
            android:id="@+id/radioButtonFriends"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_friends" />

        <RadioButton
            android:id="@+id/radioButtonPublic"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_public" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="@dimen/margin_default"
        android:background="@color/colorAccent"
        android:text="@string/text_upload" />

</LinearLayout>